--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = https://ikar888-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url= https://sentianalyzer.1tsunj0cc9jc.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url= https://sentianalyzer1.1tv03vxj0m6g.us-south.codeengine.appdomain.cloud/
